# maverick

./: .gitignore  maverick.cabal  stack.yaml
app/: Main.hs
assets/shaders/: shader-textured-pixel.glsl  shader-textured-vertex.glsl
src/Maverick/: Console.hs
src/Maverick/Console/: Render.hs
