name:                maverick
version:             0.1.0.0
synopsis:            Embeddable GPU-powered console with full Unicode support
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/maverick#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, <year>
category:            <category>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Maverick.Console
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , text
                     , OpenGL
                     , repa
                     , linear
                     , vector
                     , colour
                     , Michelangelo
                     , Cartesian
  default-language:    Haskell2010

executable maverick
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fprof-auto -auto-all
  build-depends:       base
                     , either
                     , lens
                     , vector
                     , linear
                     , repa
                     , transformers
                     , containers
                     , extra
                     , GLFW-b
                     , OpenGL
                     , Michelangelo
                     , maverick
  default-language:    Haskell2010

test-suite maverick-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , maverick
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/maverick
